[metadata]
name = firecracker-tests
version = 0.1.0
description = Firecracker API integration tests

[options]
# find any package under this dir
packages = find:
# treat the current folder as the root for packages
package_dir =
    = .

[options.packages.find]
# only include these directories as packages
include =
    data
    framework
    host_tools
    integration_tests
